Add BookStoreDataBase + Entity Model Change Web.config and deleted App.config

--- a/BookStore/Domein/Domein.csproj
+++ b/BookStore/Domein/Domein.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,11 +51,77 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AspNetRole.cs">
+      <DependentUpon>BookStoreDataBaseEntityModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AspNetUser.cs">
+      <DependentUpon>BookStoreDataBaseEntityModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AspNetUserClaim.cs">
+      <DependentUpon>BookStoreDataBaseEntityModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AspNetUserLogin.cs">
+      <DependentUpon>BookStoreDataBaseEntityModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Author.cs">
+      <DependentUpon>BookStoreDataBaseEntityModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Book.cs">
+      <DependentUpon>BookStoreDataBaseEntityModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="BookStoreDataBaseEntityModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BookStoreDataBaseEntityModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="BookStoreDataBaseEntityModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BookStoreDataBaseEntityModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="BookStoreDataBaseEntityModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BookStoreDataBaseEntityModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Country.cs">
+      <DependentUpon>BookStoreDataBaseEntityModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="C__MigrationHistory.cs">
+      <DependentUpon>BookStoreDataBaseEntityModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ExtraAttribute.cs">
+      <DependentUpon>BookStoreDataBaseEntityModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Ganre.cs">
+      <DependentUpon>BookStoreDataBaseEntityModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <EntityDeploy Include="BookStoreDataBaseEntityModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>BookStoreDataBaseEntityModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="BookStoreDataBaseEntityModel.edmx.diagram">
+      <DependentUpon>BookStoreDataBaseEntityModel.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="BookStoreDataBaseEntityModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>BookStoreDataBaseEntityModel.edmx</DependentUpon>
+      <LastGenOutput>BookStoreDataBaseEntityModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="BookStoreDataBaseEntityModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>BookStoreDataBaseEntityModel.edmx</DependentUpon>
+      <LastGenOutput>BookStoreDataBaseEntityModel.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
