--- a/BookStore/BookStore/BookStore.csproj
+++ b/BookStore/BookStore/BookStore.csproj
@@ -215,6 +215,9 @@
     <Content Include="App_Data\BookStoreDatabase_log.ldf">
       <DependentUpon>BookStoreDatabase.mdf</DependentUpon>
     </Content>
+    <Content Include="Content\AngularJS\AngularController.js" />
+    <Content Include="Content\AngularJS\AngularModule.js" />
+    <Content Include="Content\AngularJS\AngularService.js" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
