--- a/BookStore/BookStore/Web.config
+++ b/BookStore/BookStore/Web.config
@@ -22,6 +22,9 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <customErrors mode="On">
+      <error statusCode="404" redirect="404.html"/>
+    </customErrors>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
