--- a/BookStore/BookStore/Web.config
+++ b/BookStore/BookStore/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\gteme\Source\Repos\Volo-Task\BookStore\BookStore\App_Data\BookStoreDatabase.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="BookStoreDatabaseEntities" connectionString="metadata=res://*/BookStoreDataBaseEntityModel.csdl|res://*/BookStoreDataBaseEntityModel.ssdl|res://*/BookStoreDataBaseEntityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\gteme\Source\Repos\Volo-Task\BookStore\BookStore\App_Data\BookStoreDatabase.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BookStoreDatabaseEntities" connectionString="metadata=res://*/BookStoreDataBaseEntityModel.csdl|res://*/BookStoreDataBaseEntityModel.ssdl|res://*/BookStoreDataBaseEntityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\gteme\Source\Repos\Volo-Task\BookStore\BookStore\App_Data\BookStoreDatabase.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
