--- a/BookStore/BookStore/BookStore.csproj
+++ b/BookStore/BookStore/BookStore.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AttributesController.cs" />
     <Compile Include="Controllers\AuthorsController.cs" />
+    <Compile Include="Controllers\BookAddAttributesController.cs" />
     <Compile Include="Controllers\BooksController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -1092,6 +1093,11 @@
     <Content Include="Views\Attributes\Delete.cshtml" />
     <Content Include="Views\Attributes\Edit.cshtml" />
     <Content Include="Views\Attributes\Index.cshtml" />
+    <Content Include="Views\BookAddAttributes\Create.cshtml" />
+    <Content Include="Views\BookAddAttributes\Delete.cshtml" />
+    <Content Include="Views\BookAddAttributes\Details.cshtml" />
+    <Content Include="Views\BookAddAttributes\Edit.cshtml" />
+    <Content Include="Views\BookAddAttributes\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Domein\Domein.csproj">
